--- a/index.css
+++ b/index.css
@@ -1,38 +1,1 @@
-.header{
-    border:1px solid black;
-    display:flex;
-    justify-content:space-between;
-    align-items: center;
-}
-.logo > img {
-    height:50px;
-    width:50px
-}
-.nav-items > ul{
-    display: flex;
-    gap:5px
-}
-.nav-items > ul > li {
-    text-decoration: none;
-    padding: 5px 5px;
-    list-style-type: none;
-}
-.res-container {
-    display: flex;
-    flex-wrap: wrap;
-}
-.res-card{
-    border:1px solid black;
-    width:220px;
-    padding:10px;
-    margin: 10px;
-    background-color: rgb(226, 219, 219);
-}
-.res-card > img{
-    width: 100%;
-    height:200px
-    /* object-fit: contain; */
-}
-.search{
- display: flex;
-}
+@import "tailwindcss";
